# TeamUnderdogRepo

./: .gitignore  LICENSE  README.md  pyproject.toml  readme_setup.md
notebooks/: 00_baseline_api.ipynb  01_data_exploration.ipynb  01_ingestion_and_embeddings.ipynb  02_query_retrieval.ipynb  02_sprint2_data_exploration.ipynb  03_rag_pipeline.ipynb  Sprint1_Validation.ipynb  Sprint1_Validation_executed.ipynb  Sprint1_Validation_rerun.ipynb  Sprint2_RAG_Observability.ipynb  Sprint2_RAG_Observability_executed.ipynb  sprint4_prompt_response_generation.ipynb
rag_storage/: default__vector_store.json  docstore.json  index_store.json
src/: api.py  ingestion.py  main.py  rag_pipeline.py  rag_system.py  vector_db.py
src/ailab/utils/: azure.py
src/mini_wikipedia_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/static/: app.js  index.html  styles.css
src/tests/: test_sprint1.py
tests/: test_00_api_baseline.py  test_10_embedding_model.py  test_20_ingestion.py  test_30_vector_db.py  test_35_rag_pipeline.py  test_40_api_vector_endpoints.py  test_45_api_rag_endpoints.py  test_50_vector_db_integration.py  test_api.py  test_embedding.py  test_ingestion.py  test_main.py  test_rag_system.py  test_sprint1.py  test_sprint2.py  test_vectordb_endpoints.py
